--- a/font-choice.html
+++ b/font-choice.html
@@ -13,6 +13,8 @@
 	<link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900italic' rel='stylesheet' type='text/css'>
 	<style>
+ 
+		h2 { font-family: lobster;}
 
 	.sample {
 		border-radius: 3px;
